# fido

./: LICENSE  README.md  fido.cabal  watch
app/: Main.hs
src/: Lib.hs
