name:                fido
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/refefer/fido#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Stanton
maintainer:          refefer@gmail.com
copyright:           Andrew Stanton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , cryptohash
                     , directory
                     , filepath
                     , http-conduit
                     , mtl
                     , random
                     , resourcet
                     , system-fileio
                     , unix
  default-language:    Haskell2010

executable fido
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base
                     , bytestring
                     , containers
                     , fido
                     , http-types
                     , optparse-applicative
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite fido-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fido
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/refefer/fido
